<?xml version="1.0" encoding="utf-8"?>
<!--
 * Licensed to UbiCollab.org under one or more contributor
 * license agreements.  See the NOTICE file distributed 
 * with this work for additional information regarding
 * copyright ownership. UbiCollab.org licenses this file
 * to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
-->
<resources>

    <string name="app_name">µC Software Store</string>
    <string name="not_implemented">Not Implemented</string>

    <!-- ActionBar menu items -->
    <string name="menu_settings1">Toggle hide incompatible</string>
    <string name="menu_settings2">Device List</string>
    <string name="menu_settings3">Settings</string>
    <string name="menu_settings4">Populate Database</string>
    <string name="menu_settings5">Only show Arduinos</string>
    <string name="menu_settings6">Go to device list</string>
    
    <!-- This is just for testing purposes. Remove when done. -->
    <string name="title_activity_main">Main</string>
    <string name="layout.activity_main">Main</string>
    <string name="search_hint">Search Apps by Name</string>
    <string name="search_label">Search Label</string>
    <string name="menu_search">Menu Search</string>

    <!-- Bluetooth devices screen -->
    <string name="devices_header">Click on a device to select it:</string>
    <string name="explanatory_text1">If you do not see your device in the screen,
        click Add device to add a device manually, or Browse shop to browse without
        connecting a device.</string>
    <string name="refresh">Refresh</string>
    <string name="add_device_button_text">Add device</string>
    <string name="browse_shop_button_text">Browse shop</string>
    <string name="bluetooth_devices_tittle">Devices</string>
    <string name="connect_with_qr_button_text">Connect with QR code</string>
    <string name="input_serial_button">Input serial</string>
    <string name="explanatory_qr_text">Click to connect with your bluetooth device
        by scanning its QR code.</string>
    <string name="explanatory_input_serial">Click to insert the MAC address of 
        your bluetooth device.</string>

    <!-- Preferences screen -->
    <string name="preferences_title">Settings</string>
    <string name="hide_incompatible">Hide incompatible</string>
    <string name="hide_incompatible_summary">Hide applications that is incompatible with your Arduino device</string>
    <string name="hide_incomatible_pref_group_title">Hide/show incompatible devices</string>
    <string name="conn_device_pref_group_title">Connections</string>
    <string name="connected_device">Connected device</string>
    <string name="conn_device_summary">Click to see the last connected device</string>
    <string name="reconnect_check_box_title">Automatically reconnect</string>
    <string name="reconnect_check_box_summary">Automatically try to reconnect to
         last connected device when application is started</string>
         
    <string name="bluetooth_type_summary">Hide devices that is not recognized as Arduinos (708)</string>
    <string name="bluetooth_type_title">Hide other devices</string>

    <!-- Add device screen -->
    <string name="add_device_screen_title">Add device</string>
    
    <!-- Intro Screen -->
    <string name="welcome">Welcome!</string>
    <string name="intro_explanation">This app store allows you to download apps to your Arduino device through Bluetooth. Press "Device List" to see nearby devices, or "Browse Shop" to enter the app store.</string>
    <string name="intro_device_list_button">Device List</string>
    <string name="intro_shop_button">Browse Shop</string>
    <string name="intro_checkbox">Automatically try to reconnect to last connected device</string>

    <!-- App view screen -->
    <string name="app_view_title">Application</string>
    <string name="install_button">Install</string>
    <string name="item_name">AppName</string>
    <string name="developer_name">MyDeveloper</string>
    <string name="item_description">Description: This describes this amazing, life changing app.</string>
    <string name="images">Images:</string>
    <string name="required_hw">Required Hardware:</string>
    
    <string name="required_hw_filler"></string>
    
    <string name="reviews_header">Reviews:</string>
    <string name="review_button">Add Review</string>
    <string name="item_profile_pic">Profile picture of item</string>
    <string name="item_picture">Pictures describing item</string>
    <string name="comments_field">Show reviews here!</string>

    <!-- Install Dialog -->
    <string name="install_dialog_topic">Installing app</string>
    <string name="install_dialog_warning">DO NOT DISCONNECT OR MOVE AWAY FROM THE DEVICE!</string>
    <string name="cancel">Cancel</string>
    <string name="hide_incompitable_checkbox">Hide/show incompitable</string>
    <string name="chooser_title">Chose QR reader</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_welcome_screen">Welcome Screen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Required Hardware -->
    <string name="supermario">Arduino Uno\nBluetooth Module\nSpeaker</string>
    <string name="celcius">Arduino Uno\nBluetooth Module\nLCD Screen\nThermometer\nPotentiometer</string>
    <string name="fahrenheit">Arduino Uno\nBluetooth Module\nLCD Screen\nThermometer\nPotentiometer</string>
    <string name="sequential">Arduino Uno\nBluetooth Module\n3x LED Lamp</string>
    <string name="alternative">Arduino Uno\nBluetooth Module\n3x LED Lamp</string>
    <string name="no_requirements">No requirements found</string>

</resources>