<?xml version="1.0" encoding="utf-8"?>
<!--
 * Licensed to UbiCollab.org under one or more contributor
 * license agreements.  See the NOTICE file distributed 
 * with this work for additional information regarding
 * copyright ownership. UbiCollab.org licenses this file
 * to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/hide_incomatible_pref_group_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_incompatible"
            android:summary="@string/hide_incompatible_summary"
            android:title="@string/hide_incompatible" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/conn_device_pref_group_title" >
        <Preference
            android:key="connected_device_dialog"
            android:summary="@string/conn_device_summary"
            android:title="@string/connected_device" />
    </PreferenceCategory>
    <!--
        Used to store the name of the last connected device. No need to show
        it in the setting screen.
    -->
    <PreferenceCategory android:key="device_name_category">
        <Preference android:key="connected_device_name" />
        <Preference android:key="connected_device_mac"/>
    </PreferenceCategory>

</PreferenceScreen>