<!--
 * Licensed to UbiCollab.org under one or more contributor
 * license agreements.  See the NOTICE file distributed 
 * with this work for additional information regarding
 * copyright ownership. UbiCollab.org licenses this file
 * to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/device_list"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/menu_settings2"/>


	<item
        android:id="@+id/settings"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/menu_settings3"/>
	
	<item
        android:id="@+id/populateDatabase"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/menu_settings4"/>
	
  <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_menu_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
  
  
  <item 
      android:id="@+id/toggle_incompitable"
      android:orderInCategory="60"
      android:showAsAction="never"
      android:title="@string/hide_incompitable_checkbox"
      android:checkable="true"/>"

</menu>