<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/intro_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/intro_explanation"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/intro_device_list_button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/refresh_button_layout"
            android:text="@string/intro_device_list_button" />
        <Button
            android:id="@+id/intro_browse_shop_button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
			android:layout_marginTop="30dp"
            android:background="@drawable/refresh_button_layout"
            android:text="@string/intro_shop_button" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="22dp"
        android:checked="false"
        android:gravity="center"
        android:text="@string/intro_checkbox"
        android:textColor="@color/white" />

</LinearLayout>