<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:textColor="@color/white" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/item_profile_pic"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/rihanna" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/app_view_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/app_view_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/ratingBarIndicator"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5" />
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="19dp"
                android:background="@drawable/refresh_button_layout"
                android:onClick="installClicked"
                android:text="@string/install_button"
                android:textColorHint="@color/blue"
                android:textColorLink="@color/onClick" />

        </LinearLayout>

        <TextView
            android:id="@+id/app_view_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/item_picture"
                    android:maxWidth="16dp"
                    android:src="@drawable/rihanna" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/item_picture"
                    android:src="@drawable/arduino" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/item_picture"
                    android:src="@drawable/games" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/item_picture"
                    android:src="@drawable/media" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/item_picture"
                    android:src="@drawable/medical" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_hw"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/required_hw_filler"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>