<?xml version="1.0" encoding="utf-8"?>

<!-- 
 * Licensed to UbiCollab.org under one or more contributor
 * license agreements.  See the NOTICE file distributed 
 * with this work for additional information regarding
 * copyright ownership. UbiCollab.org licenses this file
 * to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="6dip" >

        <TextView
            android:id="@+id/explanatory_qr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explanatory_qr_text"
            android:textColor="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip" >

        <Button
            android:id="@+id/qr_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_with_qr_button_text"
            android:background="@drawable/refresh_button_layout"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip" >

        <TextView
            android:id="@+id/explanatory_serial_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explanatory_input_serial" 
            android:textColor="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip" >

        <Button
            android:id="@+id/input_serial_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_serial_button" 
            android:background="@drawable/refresh_button_layout" />

    </LinearLayout>

</LinearLayout>